--- a/src/Board.css
+++ b/src/Board.css
@@ -1,6 +1,7 @@
 .board {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .board-row {
@@ -14,8 +15,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* margin: 16px; */
-  /*font-size: 48px;*/
 }
 
 .board-text {
@@ -23,6 +22,7 @@
   font-size: 24px;
 }
 
+/* Hack: Override theming for higlihgts */
 .board-cell.highlight {
-  background-color: lightblue;
+  background-color: lightblue !important;
 }
